<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学友</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zan">赞</string>
    <string name="num_collection">(0)</string>
    <string name="num_praise">(0)</string>
    <string name="num_comment">(0)</string>
    <string name="filename">文件名</string>
    <string name="title_activity_public_doc">上传文件</string>
    <string name="public_detail">发布</string>
    <string name="load">正在加载....</string>
    <string name="title_activity_detail_share">共享详情</string>
    <string name="nickname_detail">昵称</string>
    <string name="grade_detail">年级</string>
    <string name="subject_detail">科目</string>
    <string name="answernum">2个回答</string>
    <string name="time_comment">12-01 23：01</string>
    <string name="takepicture">拍照</string>
    <string name="selectpicture">选择本地图片</string>
    <string name="uploadfile">上传文件</string>
    <string name="select_file">选择文件</string>
    <string name="crop_save_text">保存</string>
    <string name="crop_discard_text">放弃</string>
    <string name="runningFaceDetection">runningFaceDetection</string>
    <string name="wallpaper">壁纸</string>
    <string name="savingImage">保存图片</string>
    <string name="multiface_crop_help">多裁剪帮助</string>
    <string name="btn_ok">确定</string>
    <string name="title_activity_edit_info">修改信息</string>
    <string name="edit_name_text">昵称</string>
    <string name="edit_academy_text">年龄</string>
    <string name="edit_grade_text">年级</string>
    <string name="saveedit">保存</string>
    <string name="edit_sex_text">性别</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_hello">hello</string>
    <string name="title_activity_picture_detail">PictureDetailActivity</string>
    <string name="title_activity_splash">注册</string>
    <string name="title_activity_comment">评论</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

</resources>
