<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/face"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/tupian" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/face"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nickname_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/nickname_detail" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/grade_detail"
                            android:textColor="@color/blue" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/subject_detail"
                            android:textColor="@color/blue" />
                    </LinearLayout>
                </LinearLayout>


               <!-- <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"

                    android:text="科目"
                    android:textSize="7pt" />

                <TextView
                    android:id="@+id/grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="年级"
                    android:textSize="7pt" />-->

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="时间"
                    android:textSize="7pt" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="详细信息详细信息详细信息详细信息详细信息详细信息详细信息"
                    android:textSize="9pt" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/idima_tupian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tupian" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/filename"
                android:textColor="@color/blue"
                android:textSize="7pt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/idima_collection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_margin="4dp"
                        android:src="@drawable/collection" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/idima_collection"
                        android:layout_marginTop="4dp"
                        android:text="@string/num_collection" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/idima_praise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_margin="4dp"
                        android:src="@drawable/image_praise" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/idima_praise"
                        android:layout_marginTop="4dp"
                        android:text="@string/num_praise" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/idima_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_margin="4dp"
                        android:src="@drawable/image_comment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/idima_comment"
                        android:layout_marginTop="4dp"
                        android:text="@string/num_comment" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answernum"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:textSize="7pt"
        android:paddingTop="5pt"
        android:paddingBottom="5pt"
        android:background="@android:color/darker_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_lidtsharedetail"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" />


</LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="7pt"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_centerHorizontal="true"
        android:text="点击加载"/>

</RelativeLayout>